--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"name": "@ootiq/blank",
 	"version": "0.0.1",
+	"description": "Is the variable blank?",
 	"main": "src/index.js",
 	"license": "Unlicense",
+	"repository": "ootiq/blank",
 	"devDependencies": {
 		"jest": "^26.6.3"
 	},
